--- a/index.html
+++ b/index.html
@@ -6,53 +6,71 @@
   <title>Saarathi FinTech – Your Loan Partner | आपका ऋण साथी</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
       background: #f4f4f4;
       color: #333;
     }
     header {
-      background: #2b7a78;
+      background: #1e3d58;
       color: white;
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
+      border-bottom: 5px solid #ff6f61;
     }
     header img {
-      max-height: 60px;
+      max-height: 80px;
+      margin-bottom: 10px;
     }
-    .intro {
-      padding: 20px;
+    header h1 {
+      font-size: 40px;
+      margin: 0;
+    }
+    .intro, .services, .form-section {
+      padding: 40px 20px;
       text-align: center;
     }
-    .services {
-      background: #ffffff;
-      padding: 20px;
-      text-align: center;
+    .intro h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
     }
-    .form-section {
-      background: #def2f1;
-      padding: 20px;
-      text-align: center;
+    .services ul {
+      list-style: none;
+      padding: 0;
+      font-size: 18px;
     }
-    .whatsapp-button {
-      background: #25d366;
+    .services li {
+      margin: 10px 0;
+    }
+    .button-container {
+      margin-top: 20px;
+    }
+    .whatsapp-button, .call-button {
+      background-color: #25d366;
       color: white;
-      padding: 10px 20px;
+      padding: 15px 30px;
       text-decoration: none;
+      font-size: 18px;
       border-radius: 5px;
-      display: inline-block;
       margin: 10px;
     }
+    .whatsapp-button {
+      background-color: #25d366;
+    }
+    .call-button {
+      background-color: #007bff;
+    }
     footer {
-      background: #17252a;
+      background: #1e3d58;
       color: white;
+      padding: 15px 0;
       text-align: center;
-      padding: 10px;
     }
   </style>
 </head>
 <body>
+
   <header>
     <img src="https://i.imgur.com/pJKG9Fq.png" alt="Saarathi FinTech Logo" />
     <h1>Saarathi FinTech</h1>
@@ -77,13 +95,15 @@
   <section class="form-section">
     <h2>Apply Now | अभी आवेदन करें</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdC1Y7JwL7T7Z_your_form_link/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    <br />
-    <a class="whatsapp-button" href="https://wa.me/919702779879" target="_blank">WhatsApp Us | हमें WhatsApp करें</a>
-    <a class="whatsapp-button" href="tel:+919702779879">Call Now | अभी कॉल करें</a>
+    <div class="button-container">
+      <a href="https://wa.me/919702779879" target="_blank" class="whatsapp-button">WhatsApp Us | हमें WhatsApp करें</a>
+      <a href="tel:+919702779879" class="call-button">Call Now | अभी कॉल करें</a>
+    </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Saarathi FinTech. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
